--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-### MongoDB Atlas Cluster
+### MongoDB Atlas 
 DB_CONNECT = mongodb+srv://thangDev:0khQHSqdDADIlKDz@techblock.g9zypel.mongodb.net/techblock?retryWrites=true&w=majority
 
 ### MongoDB Local
