--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "pm2-runtime start ecosystem.config.js --env production",
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "pm2 start ecosystem.config.js --watch"
   },
